--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -5,8 +5,9 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:fitsSystemWindows="true"
-    tools:context="com.jtosti.moneymanager.WalletActivity">
+    tools:context="com.jtosti.moneymanager.ActivityWallet">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -56,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
                 android:layout_margin="@dimen/fab_margin"
-                app:srcCompat="@drawable/ic_dashboard_black_24dp" />
+                app:srcCompat="@drawable/ic_add_black_24dp" />
 
         </android.support.design.widget.CoordinatorLayout>
 
